# vibecoin

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  STORAGE_CHANGES.md  commit_message.txt  commit_message_mempool.txt  commit_message_network.txt  commit_message_network_enhanced.txt  config.toml  config_node2.toml  create_config.sh  create_vibecoin_service.sh  docker-compose.dev.yml  docker-compose.testnet.yml  genesis.toml  git_push.sh  query_blocks.rs  request_latest_block.rs  run_node2.sh  standalone_test.rs  test_connection.sh  test_objects.rs  test_storage.rs  trigger_sync.rs  update_seed_node.sh
benches/: storage_benchmark.rs
config/: consensus.rs  example_miner_wallet.json  mod.rs  network.rs  node.rs  node_8333_wallet.json  node_8334_wallet.json  node_wallet.json  storage.rs
consensus/: README.md  block_processor.rs  config.rs  difficulty.rs  engine.rs  engine_runner.rs  fork.rs  miner.rs  mod.rs  poh.rs  poh_old.rs  types.rs  validator.rs
consensus/mining/: block_producer.rs  mempool.rs  mod.rs
consensus/poh/: generator.rs  mod.rs  verifier.rs
consensus/pow/: difficulty.rs  miner.rs  mod.rs
consensus/types/: block_header.rs  block_template.rs  chain_state.rs  config.rs  errors.rs  fork_choice.rs  mod.rs  target.rs
consensus/validation/: block_validator.rs  fork_choice.rs  mod.rs  poh_verifier.rs  transaction_validator.rs
crypto/: README.md  bls.rs  hash.rs  keys.rs  mod.rs  signer.rs  zk.rs
crypto/tests/: crypto_tests.rs  integration_tests.rs
data/vibecoin/: genesis.toml
docs/: README.md  architecture.md  code_standards.md  cryptography.md  development.md  file_size_policy.md  network_troubleshooting.md  storage_integration.md  storage_schema.md  storage_system.md  storage_usage.md
docs/api/: README.md
docs/architecture/: system_architecture.md
docs/guides/: developer_workflow.md  installation_guide.md
docs/modules/: README.md  config.md  consensus.md  crypto.md  mempool.md  network.md  object_system.md  storage.md
examples/: blockchain_demo.rs  network_demo.rs  node_runner.rs
mempool/: README.md  mod.rs  pool.rs  tests.rs  types.rs
network/: README.md  README_UPDATED.md  mod.rs
network/codec/: frame.rs  mod.rs
network/events/: event_bus.rs  event_types.rs  mod.rs
network/handlers/: block_handler.rs  message_handler.rs  mod.rs  sync_handler.rs  transaction_handler.rs
network/integration/: consensus_integration.rs  mempool_integration.rs  mod.rs  storage_integration.rs
network/peer/: advanced_registry.rs  broadcaster.rs  handler.rs  manager.rs  mod.rs  performance.rs  registry.rs  reputation.rs  state.rs
network/service/: advanced_router.rs  dialer.rs  listener.rs  mod.rs  router.rs  system_router.rs
network/sync/: mod.rs  sync_manager.rs  sync_service.rs
network/tests/: integration_tests.rs
network/types/: message.rs  mod.rs  node_info.rs
scripts/: bootstrap_devnet.sh  bootstrap_testnet.sh
src/: consensus  crypto  lib.rs  main.rs  mempool
src/consensus/: fork_resolver.rs  mod.rs  (+4 more)
standalone_test/: Cargo.toml
state_management_demo/: Cargo.toml
state_management_demo/src/: lib.rs  main.rs
state_management_demo/src/storage/: kv_store.rs  mod.rs  state_indexing.rs  state_pruning.rs  state_sharding.rs  state_validation.rs
state_management_standalone/: Cargo.toml
storage/: README.md  batch_operations.rs  block_store.rs  kv_store.rs  mempool.rs  mod.rs  object.rs  object_processor.rs  object_store.rs  object_transaction.rs  poh_store.rs  rocksdb_schema.rs  snapshot.rs  state.rs  state_indexing.rs  state_manager.rs  state_pruning.rs  state_sharding.rs  state_store.rs  state_sync.rs  state_validation.rs  trie.rs  tx_store.rs
tests/: advanced_state_tests.rs  state_management_integration.rs  storage_tests.rs
tools/: debug.rs  development.rs  genesis.rs  mod.rs  monitoring.rs
(+51 files in other folders)
