[package]
name = "vibecoin"
version = "0.1.0"
edition = "2021"
authors = ["Vibecoin Team"]
description = "A next-generation blockchain combining Proof-of-Work with Solana-style Proof of History"

[dependencies]
rocksdb = "0.20.1"
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

# Cryptography dependencies
ed25519-dalek = "1.0.1"
sha2 = "0.10.6"
rand_core = "0.6.4"
hex = "0.4.3"

# Networking dependencies
tokio = { version = "1.28.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
futures = "0.3.28"
bytes = "1.4.0"
dashmap = "5.4.0"
async-trait = "0.1.68"
backoff = { version = "0.4.0", features = ["tokio"] }
tracing = "0.1.37"

[dev-dependencies]
tempfile = "3.5.0"
criterion = "0.4"

[lib]
name = "vibecoin"
path = "src/lib.rs"

[[bin]]
name = "vibecoin"
path = "src/main.rs"
