[package]
name = "vibecoin"
version = "0.1.0"
edition = "2021"
authors = ["Vibecoin Team"]
description = "A next-generation blockchain combining Proof-of-Work with Solana-style Proof of History"

[features]
default = []
advanced-crypto = ["blst", "curve25519-dalek", "merlin", "rand_chacha"]

[dependencies]
# rocksdb = "0.20.1"
rocksdb = { version = "0.21", default-features = false, features = ["snappy", "lz4", "zstd", "zlib"] }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"

# Cryptography dependencies
ed25519-dalek = "1.0.1"
sha2 = "0.10.6"
rand_core = "0.6.4"
hex = "0.4.3"

# Advanced cryptography dependencies (optional)
blst = { version = "0.3.10", optional = true }
curve25519-dalek = { version = "3.2.0", optional = true }
merlin = { version = "3.0.0", optional = true }
rand_chacha = { version = "0.3.0", optional = true }

# Networking dependencies
tokio = { version = "1.28.0", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["codec"] }
futures = "0.3.28"
bytes = "1.4.0"
dashmap = "5.4.0"
async-trait = "0.1.68"
backoff = { version = "0.4.0", features = ["tokio"] }
tracing = "0.1.37"

# Testing dependencies
tempfile = "3.5.0"

# Consensus dependencies
num-bigint = "0.4.3"
num-traits = "0.2.15"
chrono = "0.4.24"
rayon = "1.7.0"
once_cell = "1.17.1"
byteorder = "1.4.3"
num_cpus = "1.15.0"
array-init = "2.1.0"
toml = "0.7.3"
structopt = "0.3.26"

# Additional dependencies for state management
scopeguard = "1.1.0"
walkdir = "2.3.3"
rand = "0.8.5"
serde_json = "1.0.114"

[dev-dependencies]
tempfile = "3.5.0"
criterion = "0.4"

[lib]
name = "vibecoin"
path = "src/lib.rs"

[[bin]]
name = "vibecoin"
path = "src/main.rs"

[[bin]]
name = "test_storage"
path = "test_storage.rs"

[[bin]]
name = "query_blocks"
path = "query_blocks.rs"

[[bin]]
name = "trigger_sync"
path = "trigger_sync.rs"

[[bin]]
name = "test_objects"
path = "test_objects.rs"
