[package]
name = "state_management_demo"
version = "0.1.0"
edition = "2021"

[dependencies]
rocksdb = "0.20.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3.3"
thiserror = "1.0"
log = "0.4"
hex = "0.4"
scopeguard = "1.1.0"
walkdir = "2.3.3"
rand = "0.8.5"
dashmap = "5.5.3"

[dev-dependencies]
tempfile = "3.3.0"
